<resources>
    <string name="app_name">003.Controles</string>

    <!-- ACTIVITY MAIN -->
    <string name="activity_main_tv">EJERCICIOS TEMA 5</string>
    <string name="activity_main_btn_1_1">1.1</string>
    <string name="activity_main_btn_1_2">1.2</string>
    <string name="activity_main_btn_1_3">1.3</string>
    <string name="activity_main_btn_1_4">1.4</string>
    <string name="activity_main_btn_2">2</string>
    <string name="activity_main_btn_3">3</string>
    <string name="activity_main_btn_4_1">4.1</string>
    <string name="activity_main_btn_4_2">4.2</string>
    <string name="activity_main_btn_5">5</string>
    <string name="activity_main_btn_6">6</string>
    <string name="activity_main_btn_7">7</string>

    <!-- EJERCICIO 5_1 -->
        <!-- EJERCICIO 5_1_1 -->
        <string name="ejercicio5_1_1_tv">Texto construido desde XML \nTamaño 20dp, Bold y color Red</string>

        <!-- EJERCICIO 5_1_2 -->
        <string name="ejercicio5_1_2_tv" />

        <!-- EJERCICIO 5_1_3 -->
        <string name="ejercicio5_1_3_tv">Texto construido desde XML</string>

        <!-- EJERCICIO 5_1_4 -->
        <string name="ejercicio5_1_4_tv">TEXTO ESCRITO FUENTE UMBRELLA</string>

    <!-- EJERCICIO 5_2 -->
    <string name="ejercicio5_2_tv">ejercicio5_2_</string>
    <string name="ejercicio5_2_btn">Activar Animación</string>

    <!-- EJERCICIO 5_3 -->
    <string name="ejercicio5_3_btn1">Click</string>
    <string name="ejercicio5_3_btn2">Long</string>
    <string name="ejercicio5_3_tv" />
    <string name="ejercicio5_3_img_description">null</string>

    <!-- EJERCICIO 5_4 -->
    <string name="ejercicio5_4_1_tv">BOTÓN SIN PULSAR</string>
    <string name="ejercicio5_4_1_btn">BTN</string>
    <string name="ejercicio5_4_2_tv">BOTÓN SIN PULSAR</string>
    <string name="ejercicio5_4_2_btn1">BTN 1</string>
    <string name="ejercicio5_4_2_btn2">BTN 2</string>

    <!-- EJERCICIO 5_5 -->
    <string name="ejercicio5_5_et1">actionNone</string>
    <string name="ejercicio5_5_et2">actionGo</string>
    <string name="ejercicio5_5_et3">actionSearch</string>
    <string name="ejercicio5_5_et4">actionSend</string>
    <string name="ejercicio5_5_et5">actionDone</string>
    <string name="ejercicio5_5_et6">actionNext</string>
    <string name="ejercicio5_5_et7">ActionPrevious</string>
    <string name="ejercicio5_5_et8">actionUnspecified</string>
    <string name="ejercicio5_5_et9">Default</string>


    <!-- EJERCICIO 5_6 -->
    <string name="ejercicio5_6_rb_1">Lunes</string>
    <string name="ejercicio5_6_rb_2">Martes</string>
    <string name="ejercicio5_6_rb_3">Miercoles</string>
    <string name="ejercicio5_6_rb_4">Jueves</string>
    <string name="ejercicio5_6_rb_5">Viernes</string>
    <string name="ejercicio5_6_rb_6">Sábado</string>
    <string name="ejercicio5_6_rb_7">Domingo</string>

    <!-- EJERCICIO 5_7 -->
    <string name="ejercicio5_7_tv_1">VALOR: 0</string>
    <string name="ejercicio5_7_tv_2">VALOR: 0</string>
    <string name="ejercicio5_6_tv">"PULSADO: "</string>



</resources>