<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ejercicio5_3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/ejercicio5_3_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ejercicio5_3_btn2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <Button
        android:id="@+id/ejercicio5_3_btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ejercicio5_3_btn1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <ImageView
        android:id="@+id/ejercicio5_3_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ejercicio5_3_img_description"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/img"
        tools:srcCompat="@drawable/img"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/ejercicio5_3_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ejercicio5_3_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775" />

</androidx.constraintlayout.widget.ConstraintLayout>