<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ejercicio5_4_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/ejercicio5_4_2_btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ejercicio5_4_2_btn1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/ejercicio5_4_2_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ejercicio5_4_2_btn2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/ejercicio5_4_2_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ejercicio5_4_2_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>